--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ dbus = "0.9.7"
 gtk = { version = "0.8.2", package = "gtk4", features = ["v4_12"] }
 log = "0.4"
 libc = "0.2"
+env_logger = "0.11.3"
+dotenv = "0.15.0"
 
-[dev-dependencies]
-simple_logger = ">=4"
+
