--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "sysd-manager"
 version = "0.0.1"
 edition = '2021'
-license = "GPL-3.0"
+license = "GPL-3.0+"
 repository = "https://github.com/mmstick/systemd-manager"
 readme = "README.md"
 authors = ["Pierre-Luc Rigaux <plrigaux@gmail.com>"]
@@ -10,7 +10,7 @@ documentation = "A GTK4 GUI for managing systemd units"
 description = "A systemd units manager"
 keywords = [ "gtk4", "linux", "systemd" ]
 rust-version = "1.78"
-
+build = "build.rs"
 
 [dependencies]
 dbus = "0.9.7"
@@ -19,4 +19,7 @@ log = "0.4"
 libc = "0.2"
 env_logger = "0.11.3"
 dotenv = "0.15.0"
+
+[build-dependencies]
+glib-build-tools = "0.19.0"
 
