--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ license = "GPL-3.0+"
 repository = "https://github.com/mmstick/systemd-manager"
 readme = "README.md"
 authors = ["Pierre-Luc Rigaux <plrigaux@gmail.com>"]
-documentation = "A GTK4 GUI for managing systemd units"
-description = "A systemd units manager"
+description = "A UI to manage systemd units"
 keywords = [ "gtk4", "linux", "systemd" ]
 rust-version = "1.78"
 build = "build.rs"
