--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,8 +32,8 @@ glib-build-tools = "0.19.0"
 summary = "A systemd units manager"
 assets = [
     { source = "target/release/sysd-manager", dest = "/usr/bin/sysd-manager", mode = "755" },
-    { source = "resources/applications/org.tool.sysd-manager.desktop", dest = "/usr/share/applications/org.tool.sysd-manager.desktop", mode = "644" },
-    { source = "resources/icons/hicolor/scalable/org.tool.sysd-manager.svg", dest = "/usr/share/icons/hicolor/scalable/apps/org.tool.sysd-manager.svg", mode = "644" },
+    { source = "data/applications/org.tool.sysd-manager.desktop", dest = "/usr/share/applications/org.tool.sysd-manager.desktop", mode = "644" },
+    { source = "data/icons/hicolor/scalable/org.tool.sysd-manager.svg", dest = "/usr/share/icons/hicolor/scalable/apps/org.tool.sysd-manager.svg", mode = "644" },
 ]
 
 [package.metadata.generate-rpm.requires]
