--- a/data/icons/hicolor/scalable/meson.build
+++ b/data/icons/hicolor/scalable/meson.build
@@ -3,8 +3,8 @@ install_data(
   install_dir: iconsdir / 'hicolor' / 'scalable' / 'apps'
 )
 
-install_data(
-  '@0@-symbolic.svg'.format(base_id),
-  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
-  rename: '@0@-symbolic.svg'.format(application_id)
-)
+#install_data(
+#  '@0@-symbolic.svg'.format(base_id),
+#  install_dir: iconsdir / 'hicolor' / 'symbolic' / 'apps',
+#  rename: '@0@-symbolic.svg'.format(application_id)
+#)
