--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ license = "GPL-3.0+"
 repository = "https://github.com/plrigaux/sysd-manager"
 readme = "README.md"
 authors = ["Pierre-Luc Rigaux <plrigaux@gmail.com>"]
-description = "A UI to manage systemd units"
+description = "A GUI to manage systemd units"
 keywords = [ "gtk4", "linux", "systemd" ]
 rust-version = "1.78"
 build = "build.rs"
