--- a/org.tool.sysd-manager.yaml
+++ b/org.tool.sysd-manager.yaml
@@ -12,7 +12,9 @@ finish-args:
 - "--socket=fallback-x11"
 - "--socket=wayland"
 - "--device=dri"
-- "--env=RUST_LOG=gtk_rust_template=debug"
+- "--socket=system-bus" #flatpak run --log-session-bus <appid> can be used to find the specific D-Bus permissions needed.
+- "--filesystem=/usr/lib/systemd/system"
+- "--env=RUST_LOG=info"
 - "--env=G_MESSAGES_DEBUG=none"
 - "--env=RUST_BACKTRACE=1"
 build-options:
