--- a/src/meson.build
+++ b/src/meson.build
@@ -32,7 +32,8 @@ endif
 
 cargo_env = [ 'CARGO_HOME=' + meson.project_build_root() / 'cargo-home' ]
 
-cargo_build = custom_target(
+#cargo_build = custom_target(
+custom_target(
   'cargo-build',
   build_by_default: true,
   build_always_stale: true,
