--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ description = "A GUI to manage systemd units"
 keywords = [ "gtk4", "linux", "systemd" ]
 rust-version = "1.78"
 build = "build.rs"
+include = ["build.rs", "/src/**/*.rs", "LICENCE", "README.md"]
 
 [profile.release]
 lto = true
