--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,8 @@ description = "A GUI to manage systemd units"
 keywords = [ "gtk4", "linux", "systemd" ]
 rust-version = "1.78"
 build = "build.rs"
-include = ["build.rs", "/src/**/*", "LICENCE", "README.md", "/data/*"]
+include = ["build.rs", "!/src/*", "LICENCE", "README.md", "!/data/*"]
+exclude = ["**/meson.build"]
 
 [profile.release]
 lto = true
