--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ log = "0.4"
 libc = "0.2"
 env_logger = "0.11.3"
 dotenv = "0.15.0"
-
+strum = { version = "0.26", features = ["derive"] }
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
