--- a/org.tool.sysd-manager.yaml
+++ b/org.tool.sysd-manager.yaml
@@ -14,6 +14,7 @@ finish-args:
 - "--device=dri"
 - "--socket=system-bus" #flatpak run --log-session-bus <appid> can be used to find the specific D-Bus permissions needed.
 - "--filesystem=host"
+- "--filesystem=home"
 - "--talk-name=org.freedesktop.Flatpak"
 - "--env=RUST_LOG=info"
 - "--env=G_MESSAGES_DEBUG=none"
