--- a/meson.build
+++ b/meson.build
@@ -3,7 +3,7 @@
 project(
   'sysd-manager',
   'rust',
-  version: '0.0.2',
+#  version: '0.0.2',
   meson_version: '>= 0.59',
   license: 'GPL-3.0+',
 )
