flatpack save file

--- a/org.tool.sysd-manager.yaml
+++ b/org.tool.sysd-manager.yaml
@@ -22,8 +22,8 @@ finish-args:
 - "--env=SYSDMNG_DIST_MODE=flatpack"
 build-options:
   append-path: "/usr/lib/sdk/rust-stable/bin:/usr/lib/sdk/llvm16/bin"
-#  build-args:
-#  - "--share=network"
+  build-args:
+  - "--share=network"
   env:
     CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
     CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_LINKER: clang
