--- a/data/applications/io.github.plrigaux.sysd-manager.desktop
+++ b/data/applications/io.github.plrigaux.sysd-manager.desktop
@@ -4,7 +4,7 @@ Icon=preferences-system
 Exec=sysd-manager
 Terminal=false
 Type=Application
-Icon=org.tool.sysd-manager
+Icon=io.github.plrigaux.sysd-manager
 StartupNotify=true
 Categories=GNOME;GTK;System;
 Keywords=Systemd;Systemctl;Services;
