--- a/io.github.plrigaux.sysd-manager.yaml
+++ b/io.github.plrigaux.sysd-manager.yaml
@@ -23,8 +23,9 @@ finish-args:
 - "--env=RUST_BACKTRACE=1"
 - "--env=SYSDMNG_DIST_MODE=flatpack"
 build-options:
+  #append-path: "/usr/lib/sdk/rust-stable/bin"
   append-path: "/usr/lib/sdk/rust-stable/bin:/usr/lib/sdk/llvm16/bin"
-  #  build-args:
+  #build-args:
   #- "--share=network"
   env:
     CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
@@ -32,9 +33,6 @@ build-options:
     CARGO_TARGET_X86_64_UNKNOWN_LINUX_GNU_RUSTFLAGS: "-C link-arg=-fuse-ld=/usr/lib/sdk/rust-stable/bin/mold"
     CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER: clang
     CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUSTFLAGS: "-C link-arg=-fuse-ld=/usr/lib/sdk/rust-stable/bin/mold"
-  test-args:
-  - "--socket=x11"
-  - "--share=network"
 modules:
 - name: sysd-manager
   buildsystem: simple
@@ -42,13 +40,16 @@ modules:
     env:
       CARGO_HOME: /run/build/sysd-manager/cargo
   build-commands:
-  - cargo --offline fetch --manifest-path Cargo.toml --verbose
-  - cargo --offline build --release --verbose
-  - install -Dm755 target/release/sysd-manager -t /app/bin/
-  - install -Dm644 data/applications/io.github.plrigaux.sysd-manager.desktop -t /app/share/applications
-  - install -Dm644 data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps
-  - install -Dm644 screenshots/* -t /app/screenshots
+  - "cargo --offline fetch --manifest-path Cargo.toml --verbose"
+  - "cargo --offline build --release --verbose"
+  - "pwd"
+  - "install -Dm755 ./target/release/sysd-manager -t /app/bin/"
+  - "install -Dm644 ./data/applications/io.github.plrigaux.sysd-manager.desktop -t /app/share/applications"
+  - "install -Dm755 ./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps/"
+  - "install -Dm755 ./data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml -t /app/share/metainfo"
+  - "install -Dm755 ./screenshots/* -t /app/screenshots"
+
   sources:
-    - type: dir
-      path: .
-    - cargo-sources.json
+  - type: dir
+    path: "."
+  - "cargo-sources.json"
