stark to use gschema

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "mesonbuild.configureOnOpen": false
+    "mesonbuild.configureOnOpen": false,
+    "files.watcherExclude": {
+        "builddir/**": true
+    },
+    "rust-analyzer.files.excludeDirs": [
+        "builddir"
+    ]
 }
