--- a/io.github.plrigaux.sysd-manager.yaml
+++ b/io.github.plrigaux.sysd-manager.yaml
@@ -45,7 +45,8 @@ modules:
   - "pwd"
   - "install -Dm755 ./target/release/sysd-manager -t /app/bin/"
   - "install -Dm644 ./data/applications/io.github.plrigaux.sysd-manager.desktop -t /app/share/applications"
-  - "install -Dm755 ./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps/"
+  - "install -Dm644 ./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps/"
+  - "install -Dm644 ./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml -t /app/share/glib-2.0/schemas"
   - "install -Dm755 ./data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml -t /app/share/metainfo"
   - "install -Dm755 ./screenshots/* -t /app/screenshots"
 
