--- a/io.github.plrigaux.sysd-manager.yaml
+++ b/io.github.plrigaux.sysd-manager.yaml
@@ -11,17 +11,21 @@ sdk-extensions:
 - org.freedesktop.Sdk.Extension.llvm16
 command: sysd-manager
 finish-args:
-- "--share=ipc"
-- "--socket=fallback-x11"
-- "--socket=wayland"
-- "--device=dri"
-- "--socket=system-bus" #flatpak run --log-session-bus <appid> can be used to find the specific D-Bus permissions needed.
-- "--filesystem=home"
-#- "--talk-name=org.freedesktop.Flatpak"
-- "--env=RUST_LOG=info"
-- "--env=G_MESSAGES_DEBUG=none"
-- "--env=RUST_BACKTRACE=1"
-- "--env=SYSDMNG_DIST_MODE=flatpack"
+- --share=ipc
+- --socket=fallback-x11
+- --socket=wayland
+- --device=dri
+- --socket=system-bus #flatpak run --log-session-bus <appid> can be used to find the specific D-Bus permissions needed.
+- --filesystem=home
+#- --talk-name=org.freedesktop.Flatpak"
+- --env=RUST_LOG=info
+- --env=G_MESSAGES_DEBUG=none
+- --env=RUST_BACKTRACE=1
+- --env=SYSDMNG_DIST_MODE=flatpack
+# Typical GNOME and GTK applications should use:
+- --talk-name=org.gtk.vfs.*
+- --filesystem=xdg-run/gvfsd
+- --talk-name=org.gnome.desktop.interface
 build-options:
   #append-path: "/usr/lib/sdk/rust-stable/bin"
   append-path: "/usr/lib/sdk/rust-stable/bin:/usr/lib/sdk/llvm16/bin"
@@ -40,15 +44,16 @@ modules:
     env:
       CARGO_HOME: /run/build/sysd-manager/cargo
   build-commands:
-  - "cargo --offline fetch --manifest-path Cargo.toml --verbose"
-  - "cargo --offline build --release --verbose"
-  - "pwd"
-  - "install -Dm755 ./target/release/sysd-manager -t /app/bin/"
-  - "install -Dm644 ./data/applications/io.github.plrigaux.sysd-manager.desktop -t /app/share/applications"
-  - "install -Dm644 ./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps/"
-  - "install -Dm644 ./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml -t /app/share/glib-2.0/schemas"
-  - "install -Dm755 ./data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml -t /app/share/metainfo"
-  - "install -Dm755 ./screenshots/* -t /app/screenshots"
+  - cargo --offline fetch --manifest-path Cargo.toml --verbose
+  - cargo --offline build --release --verbose
+  - pwd
+  - install -Dm755 ./target/release/sysd-manager -t /app/bin/
+  - install -Dm644 ./data/applications/io.github.plrigaux.sysd-manager.desktop -t /app/share/applications
+  - install -Dm644 ./data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg -t /app/share/icons/hicolor/scalable/apps/
+  - install -Dm644 ./data/schemas/io.github.plrigaux.sysd-manager.gschema.xml -t /app/share/glib-2.0/schemas
+  - install -Dm644 ./data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml -t /app/share/metainfo
+  - install -Dm644 ./screenshots/* -t /app/screenshots
+  - glib-compile-schemas /app/share/glib-2.0/schemas
 
   sources:
   - type: dir
