--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,24 @@
 [package]
 name = "sysd-manager"
-version = "0.1.4"
+version = "0.1.5"
 edition = '2021'
 license = "GPL-3.0-or-later"
 repository = "https://github.com/plrigaux/sysd-manager"
 readme = "README.md"
 authors = ["Pierre-Luc Rigaux <plrigaux@gmail.com>"]
 description = "A GUI to manage systemd units"
-keywords = [ "gtk4", "linux", "systemd" ]
+keywords = ["gtk4", "linux", "systemd"]
 rust-version = "1.79"
 build = "build.rs"
-include = ["build.rs", "/src", "LICENCE", "README.md", "/data", "!/**/meson.build"]
-
+include = [
+    "build.rs",
+    "/src",
+    "LICENCE",
+    "README.md",
+    "/data",
+    "!/**/meson.build",
+]
+default-run = "sysd-manager"
 
 [[bin]]
 name = "sysd-manager"
@@ -32,6 +39,8 @@ libc = "0.2"
 env_logger = "0.11.3"
 dotenv = "0.15.0"
 strum = { version = "0.26", features = ["derive"] }
+ashpd = "0.8"
+tokio = { version = "1.39.1", features = ["full"] }
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
