--- a/io.github.plrigaux.sysd-manager.yaml
+++ b/io.github.plrigaux.sysd-manager.yaml
@@ -1,4 +1,3 @@
----
 id: io.github.plrigaux.sysd-manager
 runtime: org.gnome.Platform
 runtime-version: '46'
@@ -15,7 +14,7 @@ finish-args:
 - --socket=fallback-x11
 - --socket=wayland
 - --device=dri
-- --socket=system-bus #flatpak run --log-session-bus <appid> can be used to find the specific D-Bus permissions needed.
+#- --socket=system-bus #flatpak run --log-session-bus <appid> can be used to find the specific D-Bus permissions needed.
 - --filesystem=home
 #- --talk-name=org.freedesktop.Flatpak"
 - --env=RUST_LOG=info
@@ -25,15 +24,21 @@ finish-args:
 # Typical GNOME and GTK applications should use:
 - --talk-name=org.gtk.vfs.*
 - --filesystem=xdg-run/gvfsd
-- --talk-name=org.gnome.desktop.interface
-- --filesystem=xdg-run/dconf
-- --filesystem=~/.config/dconf:ro
-- --talk-name=ca.desrt.dconf
-- --env=DCONF_USER_CONFIG_DIR=.config/dconf
-- --env=GIO_EXTRA_MODULES=/app/lib/gio/modules/
+# Needed to talk to systemd1 with dbus
+- --talk-name=org.freedesktop.systemd1
+- --talk-name=org.freedesktop.systemd1.Unit
+- --talk-name=org.freedesktop.systemd1.Manager
+- --own-name=org.freedesktop.systemd1
+- --own-name=org.freedesktop.systemd1.Unit
+- --own-name=org.freedesktop.systemd1.Manager
+- --talk-name=org.freedesktop.DBus
+- --system-talk-name=org.freedesktop.DBus
 build-options:
   #append-path: "/usr/lib/sdk/rust-stable/bin"
+  #append-path: "/usr/lib/sdk/rust-stable/bin"
   append-path: "/usr/lib/sdk/rust-stable/bin:/usr/lib/sdk/llvm16/bin"
+  #build-args:
+  #- "--share=network"
   #build-args:
   #- "--share=network"
   env:
@@ -44,6 +49,10 @@ build-options:
     CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_RUSTFLAGS: "-C link-arg=-fuse-ld=/usr/lib/sdk/rust-stable/bin/mold"
 modules:
 - name: sysd-manager
+  buildsystem: simple
+  build-options:
+    env:
+      CARGO_HOME: /run/build/sysd-manager/cargo
   buildsystem: simple
   build-options:
     env:
