--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 authors = ["Pierre-Luc Rigaux <plrigaux@gmail.com>"]
 description = "A GUI to manage systemd units"
 keywords = ["gtk4", "linux", "systemd"]
-rust-version = "1.79"
+rust-version = "1.80"
 build = "build.rs"
 include = [
     "build.rs",
@@ -45,6 +45,7 @@ tokio = { version = "1.39.1", features = ["full"] }
 zbus = "4"
 zvariant = "4.2.0"
 serde = "1.0.204"
+lazy_static = "1.5.0"
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
