--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ dotenv = "0.15.0"
 strum = { version = "0.26", features = ["derive"] }
 dconf_rs = "0.3.0"
 ashpd = "0.8"
-tokio = { version = "=1.38", features = ["full"] }
+tokio = { version = "~1.38", features = ["full"] }
 zbus = "4"
 zvariant = "4.2.0"
 serde = "1.0"
