--- a/sysd_test_service/Cargo.toml
+++ b/sysd_test_service/Cargo.toml
@@ -25,7 +25,7 @@ maplit = "1.0.2"
 tokio = { version = "1.39", features = ["full"] }
 tokio-util = "0.7"
 signal-hook = "0.3.17"
-#actix-web = "4"
+anstyle = "1"
 axum = "0.7"
 
 [dev-dependencies]
