--- a/tiny_daemon/Cargo.toml
+++ b/tiny_daemon/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sysd-test-manager"
+name = "tiny_daemon"
 version = "0.1.6"
 edition = '2021'
 license = "GPL-3.0-or-later"
@@ -14,19 +14,8 @@ rust-version = "1.80"
 [dependencies]
 log = "0.4"
 env_logger = "0.11.3"
-dotenv = "0.15.0"
-strum = { version = "0.26", features = ["derive"] }
-ashpd = "0.9"
-serde = "1.0"
-anyhow = "1.0"
 clap = { version = "4.2.7", features = ["derive"] }
-futures = "0.3.28"
-maplit = "1.0.2"
 tokio = { version = "1.39", features = ["full"] }
-tokio-util = "0.7"
 signal-hook = "0.3.17"
 anstyle = "1"
 axum = "0.7"
-
-[dev-dependencies]
-indoc = "2.0.1"
