--- a/io.github.plrigaux.sysd-manager.yaml
+++ b/io.github.plrigaux.sysd-manager.yaml
@@ -15,6 +15,7 @@ finish-args:
 - --socket=wayland
 - --device=dri
 - --filesystem=home
+- --filesystem=host
 #- --talk-name=org.freedesktop.Flatpak"
 - --env=RUST_LOG=info
 - --env=G_MESSAGES_DEBUG=none
