--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sysd-manager"
-version = "0.1.7"
+version = "0.1.8"
 edition = '2021'
 license = "GPL-3.0-or-later"
 repository = "https://github.com/plrigaux/sysd-manager"
@@ -38,12 +38,12 @@ libc = "0.2"
 env_logger = "0.11.3"
 dotenv = "0.15.0"
 strum = { version = "0.26", features = ["derive"] }
-ashpd = "0.8"
 tokio = { version = "1.39", features = ["full"] }
 zbus = "4"
-zvariant = { version = "4.1", features = ["gvariant"] }
+zvariant = { version = "4", features = ["gvariant"] }
 serde = "1.0"
 chrono = "0.4.38"
+adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
