--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,10 +44,12 @@ zvariant = { version = "4", features = ["gvariant"] }
 serde = "1.0"
 chrono = "0.4.38"
 adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
-ansi-parser = "0.9"
+regex = "1.11.0"
+
+[dev-dependencies]
 cansi = "2.2.1"
 colored = "2.1.0"
-regex = "1.11.0"
+ansi-parser = "0.9"
 
 [build-dependencies]
 #glib-build-tools = "0.19.0"
