--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,9 +38,9 @@ libc = "0.2"
 env_logger = "0.11.3"
 dotenv = "0.15.0"
 strum = { version = "0.26", features = ["derive"] }
-tokio = { version = "1.39", features = ["full"] }
-zbus = "4"
-zvariant = { version = "4", features = ["gvariant"] }
+tokio = { version = "1.41", features = ["full"] }
+zbus = "5"
+zvariant = "5"
 serde = "1.0"
 chrono = "0.4.38"
 adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
