--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sysd-manager"
-version = "1.1.1"
+version = "1.2.0"
 edition = '2021'
 license = "GPL-3.0-or-later"
 repository = "https://github.com/plrigaux/sysd-manager"
@@ -45,6 +45,7 @@ zvariant = "5"
 serde = "1.0"
 chrono = "0.4.38"
 regex = "1.11.0"
+async-channel = "2.3.1"
 
 [dev-dependencies]
 
