--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ default-run = "sysd-manager"
 name = "sysd-manager"
 path = "src/main.rs"
 
-#[[bin]] test
+#[[bin]] testa
 #name = "force-build"
 #path = "build.rs"
 
