--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -1,7 +1,3 @@
-s as a start to creating your own,
-# and remove these comments. For more information, see 'man PKGBUILD'.
-# NOTE: Please fill out the license field for your package! If it is unknown,
-# then please put 'unknown'.
 
 # Maintainer: Pierre-Luc Rigaux 
 pkgname=sysd-manager
@@ -27,18 +23,18 @@ changelog=
 _commit=
 source=("git+https://github.com/plrigaux/sysd-manager.git#commit=$_commit")
 noextract=()
-sha256sums=
+sha256sums=()
 validpgpkeys=()
 
 build() {
-  cd $pkgname
+	cd $pkgname
 	export RUSTUP_TOOLCHAIN=stable
 	export CARGO_TARGET_DIR=target
 	cargo build --locked --release --features default
 }
 
 check() {
-  cd $pkgname
+	cd $pkgname
 	export RUSTUP_TOOLCHAIN=stable
 	cargo test --frozen --features default
 }
