--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -26,6 +26,12 @@ noextract=()
 sha256sums=()
 validpgpkeys=()
 
+prepare() {
+	cd $pkgname
+    export RUSTUP_TOOLCHAIN=stable
+    cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
+}
+
 build() {
 	cd $pkgname
 	export RUSTUP_TOOLCHAIN=stable
@@ -33,17 +39,17 @@ build() {
 	cargo build --locked --release --features default
 }
 
-check() {
-	cd $pkgname
-	export RUSTUP_TOOLCHAIN=stable
-	cargo test --frozen --features default
-}
+#check() {
+#	cd $pkgname
+#	export RUSTUP_TOOLCHAIN=stable
+#	cargo test --frozen --features default
+#}
 
 package() {
-	install -Dm755 "target/release/sysd-manager" -t "$pkgdir/usr/bin"
-	install -Dm644 "data/applications/io.github.plrigaux.sysd-manager.desktop" -t "$pkgdir/usr/share/applications"
-	install -Dm644 "data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg" -t "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
-	install -Dm644 "data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
-	install -Dm644 "data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
+	install -Dm755 "$pkgname/target/release/sysd-manager" -t "$pkgdir/usr/bin"
+	install -Dm644 "$pkgname/data/applications/io.github.plrigaux.sysd-manager.desktop" -t "$pkgdir/usr/share/applications"
+	install -Dm644 "$pkgname/data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg" -t "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
+	install -Dm644 "$pkgname/data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
+	install -Dm644 "$pkgname/data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
 	glib-compile-schemas "$pkgdir/usr/share/glib-2.0/schemas"
 }
