--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -4,7 +4,7 @@ pkgname=sysd-manager
 pkgver=
 pkgrel=1
 epoch=
-pkgdesc="A GUI systemd unit manager"
+pkgdesc="A systemd GUI to manage your Services, Timers, Sockets and other units. You can enable, disable, stop and start them. Also, you can view their config file and peak at their journal logs."
 arch=('x86_64' 'aarch64')
 url="https://github.com/plrigaux/sysd-manager"
 license=('GPLv3+')
@@ -18,7 +18,7 @@ conflicts=()
 replaces=()
 backup=()
 options=()
-install=
+install=$pkgname.install
 changelog=
 _commit=
 source=("git+https://github.com/plrigaux/sysd-manager.git#commit=$_commit")
@@ -51,5 +51,4 @@ package() {
 	install -Dm644 "$pkgname/data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg" -t "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
 	install -Dm644 "$pkgname/data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
 	install -Dm644 "$pkgname/data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
-	glib-compile-schemas "$pkgdir/usr/share/glib-2.0/schemas"
 }
