--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -19,7 +19,7 @@ replaces=()
 backup=()
 options=()
 install=$pkgname.install
-changelog=
+changelog=CHANGELOG.md
 _commit=
 source=("git+https://github.com/plrigaux/sysd-manager.git#commit=$_commit")
 noextract=()
