--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ chrono = "0.4.39"
 regex = "1.11"
 sysd =  { version = "0.10", package = "systemd"} 
 clap = { version = "4.5", features = ["derive"] }
+sourceview5 = "0.9"
 
 [dev-dependencies]
 
