--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,9 +50,11 @@ zvariant = "5.4"
 serde = "1.0"
 chrono = "0.4.39"
 regex = "1.11"
-sysd =  { version = "0.10", package = "systemd"} 
 clap = { version = "4.5", features = ["derive"] }
 sourceview5 = "0.9"
+sysd =  { version = "0.10", package = "systemd"} 
+libsysd = { version = "0.9", package = "libsystemd-sys"} 
+foreign-types-shared = "0.3.1"
 
 [dev-dependencies]
 
