modif git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,6 @@ cargo-sources.json
 /tiny_daemon/target/
 __pycache__/
 .vscode
-/tiny_deamon/Cargo.lock
+/tiny_daemon/Cargo.lock
 .cargo
 data/schemas/gschemas.compiled
