--- a/tiny_daemon/Cargo.toml
+++ b/tiny_daemon/Cargo.toml
@@ -13,9 +13,10 @@ rust-version = "1.80"
 
 [dependencies]
 log = "0.4"
-env_logger = "0.11.3"
-clap = { version = "4.2.7", features = ["derive"] }
-tokio = { version = "1.39", features = ["full"] }
+env_logger = "0.11"
+clap = { version = "4.5", features = ["derive"] }
+tokio = { version = "1", features = ["full"] }
 signal-hook = "0.3.17"
 anstyle = "1"
-axum = "0.7"
+axum = "0.8"
+libc = "0.2"
