gen core for release notes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ zvariant = "5.4"
 [build-dependencies]
 #glib-build-tools = "0.19.0"
 #cargo-generate-rpm = "0.14.1"
+quick-xml =  "0.37.2"
 
 
 [package.metadata.generate-rpm]
