--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ sysd =  { version = "0.10", package = "systemd"}
 zbus = "5.5"
 zbus_macros =  "5.5" 
 zvariant = "5.4"
+const_format = "0.2.34"
 
 [dev-dependencies]
 
