--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,9 +32,9 @@ flatpak = []
 lto = true
 
 [dependencies]
-pango = { version = "*", package = "pango", features = ["v1_56"] }
+pango = { version = "0", package = "pango", features = ["v1_56"] }
 adw = { version = "0.7.2", package = "libadwaita", features = ["v1_7"] }
-gio = { version = "*", package = "gio", features = ["v2_84"] }
+gio = { version = "0", package = "gio", features = ["v2_84"] }
 gtk = { version = "0.9.6", package = "gtk4", features = ["v4_18"] }
 
 
