--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -9,7 +9,7 @@ arch=('x86_64' 'aarch64')
 url="https://github.com/plrigaux/sysd-manager"
 license=('GPLv3+')
 groups=()
-depends=("gtk4" "libadwaita" "systemd-libs")
+depends=("gtk4" "libadwaita" "systemd-libs" "gtksourceview5")
 makedepends=(cargo git)
 checkdepends=()
 optdepends=()
