--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -21,7 +21,9 @@ options=()
 install=$pkgname.install
 changelog=CHANGELOG.md
 _commit=
-source=("git+https://github.com/plrigaux/sysd-manager.git#commit=$_commit")
+#source=("git+https://github.com/plrigaux/sysd-manager.git#commit=$_commit")
+source=("https://github.com/plrigaux/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
+#https://github.com/plrigaux/sysd-manager/archive/refs/tags/v1.22.0.tar.gz
 noextract=()
 sha256sums=()
 validpgpkeys=()
