--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -21,21 +21,21 @@ options=()
 install=$pkgname.install
 changelog=CHANGELOG.md
 _commit=
-#source=("git+https://github.com/plrigaux/sysd-manager.git#commit=$_commit")
 source=("https://github.com/plrigaux/${pkgname}/archive/refs/tags/v${pkgver}.tar.gz")
-#https://github.com/plrigaux/sysd-manager/archive/refs/tags/v1.22.0.tar.gz
 noextract=()
 sha256sums=()
 validpgpkeys=()
 
 prepare() {
-	cd $pkgname
+	echo hello
+	pwd
+	cd $pkgname-$pkgver
     export RUSTUP_TOOLCHAIN=stable
     cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-	cd $pkgname
+	cd $pkgname-$pkgver
 	export RUSTUP_TOOLCHAIN=stable
 	export CARGO_TARGET_DIR=target
 	cargo build --locked --release --features default
