--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -25,17 +25,16 @@ source=("https://github.com/plrigaux/${pkgname}/archive/refs/tags/v${pkgver}.tar
 noextract=()
 sha256sums=()
 validpgpkeys=()
+pkgsrcdir=$pkgname-$pkgver
 
 prepare() {
-	echo hello
-	pwd
-	cd $pkgname-$pkgver
+	cd $pkgsrcdir
     export RUSTUP_TOOLCHAIN=stable
     cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
-	cd $pkgname-$pkgver
+	cd $pkgsrcdir
 	export RUSTUP_TOOLCHAIN=stable
 	export CARGO_TARGET_DIR=target
 	cargo build --locked --release --features default
@@ -48,9 +47,9 @@ build() {
 #}
 
 package() {
-	install -Dm755 "$pkgname/target/release/sysd-manager" -t "$pkgdir/usr/bin"
-	install -Dm644 "$pkgname/data/applications/io.github.plrigaux.sysd-manager.desktop" -t "$pkgdir/usr/share/applications"
-	install -Dm644 "$pkgname/data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg" -t "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
-	install -Dm644 "$pkgname/data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
-	install -Dm644 "$pkgname/data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
+	install -Dm755 "$pkgsrcdir/target/release/sysd-manager" -t "$pkgdir/usr/bin"
+	install -Dm644 "$pkgsrcdir/data/applications/io.github.plrigaux.sysd-manager.desktop" -t "$pkgdir/usr/share/applications"
+	install -Dm644 "$pkgsrcdir/data/icons/hicolor/scalable/apps/io.github.plrigaux.sysd-manager.svg" -t "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
+	install -Dm644 "$pkgsrcdir/data/schemas/io.github.plrigaux.sysd-manager.gschema.xml" -t "$pkgdir/usr/share/glib-2.0/schemas"
+	install -Dm644 "$pkgsrcdir/data/metainfo/io.github.plrigaux.sysd-manager.metainfo.xml" -t "$pkgdir/usr/share/metainfo"
 }
